<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.game.BattleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/hpGauge"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/asbGauge"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/hpGauge" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="71dp"
            android:layout_marginLeft="71dp"
            android:layout_marginTop="60dp"
            android:scaleX="-1"
            android:src="@drawable/player_idle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/asbGauge"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/hp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="9dp"
            android:text="@string/asb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/enemy1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginLeft="155dp"
            android:layout_marginTop="52dp"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/asbGauge"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/enemy2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginLeft="53dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintStart_toEndOf="@+id/enemy1"
            app:layout_constraintTop_toBottomOf="@+id/hpGauge"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/blockBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginBottom="17dp"
            android:text="@string/block"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/wachout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginLeft="9dp"
            android:layout_marginBottom="26dp"
            android:text="@string/wachout"
            android:textColor="#FF0000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/blockBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>